# bareTypes

./: README.md  mkdocs.yml  punch_config.py  punch_version.py  pyproject.toml  setup.py
3.6/api/baretypes.types/: index.html
baretypes/: __init__.py  types.py
docs/: 404.html  index.html  versions.json
docs/3.6/: index.html
docs/api/: baretypes.types.md
docs/api/baretypes.types/: index.html
docs/search/: search_index.json
documentation/: index.md
src/baretypes/: __init__.py  types.py
stable/api/baretypes.types/: index.html
