[tool.poetry]
name = "baretypes"
version = "3.1.0"
description = "Types for bareASGI and bareClient"
authors = ["Rob Blackbourn <rob.blackbourn@gmail.com>"]
license = "Apache-2.0"
readme = "README.md"
packages = [
    { include = "baretypes", from = "src" },
]
repository = "https://github.com/rob-blackbourn/baretypes"

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pytest = "^5.0"
pytest-runner = "^5.1"
pylint = "^2.4"
mypy = "^0.740.0"
rope = "^0.14.0"
autopep8 = "^1.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
