[tool.poetry]
name = "baretypes"
version = "3.3.2"
description = "Types for bareASGI and bareClient"
authors = ["Rob Blackbourn <rob.blackbourn@gmail.com>"]
license = "Apache-2.0"
readme = "README.md"
packages = [
    { include = "baretypes" },
]
repository = "https://github.com/rob-blackbourn/bareTypes"

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pytest = "^5.0"
pytest-runner = "^5.1"
pylint = "^2.8"
rope = "^0.14.0"
autopep8 = "^1.4"
mkdocs = "^1.0.4"
mkdocs-material = "^4.6.3"
jetblack-markdown = "^0.6"
mypy = "^0.812"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
