[tool.poetry]
name = "baretypes"
version = "3.6.4"
description = "Types for bareASGI and bareClient"
authors = ["Rob Blackbourn <rob.blackbourn@gmail.com>"]
license = "Apache-2.0"
readme = "README.md"
packages = [
    { include = "baretypes" },
]
repository = "https://github.com/rob-blackbourn/bareTypes"

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
autopep8 = "^1.5"
pytest = "^5.0"
pytest-runner = "^5.1"
pylint = "^2.9"
rope = "^0.14.0"
mkdocs = "^1.2"
mkdocs-material = "^7.2"
jetblack-markdown = "^0.6"
mypy = "^0.910"
mike = "^1.1.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
